--- a/school-website/src/pages/AdminPages/Students/screens/ViewAndEditStudents/styles.css
+++ b/school-website/src/pages/AdminPages/Students/screens/ViewAndEditStudents/styles.css
@@ -15,3 +15,14 @@
   width: 50%;
   align-self: center;
 }
+
+.delete-multiple {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.selected-row {
+  background-color: #e45959; /* light red */
+}
